I think I optimized all of the images except hero (also deleted console.log from windchill)

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,8 +31,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><img src="images/facebook.png" alt="Image and link to our facebook." id="facebook"></a>
-            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><img src="images/twitter.png" alt="Image and link to our twitter." id="twitter"></a>
+            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="images/facebook40.webp" alt="Facebook Icon" srcset="images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><figure class="twitter_logo"><img src="images/twitter40.webp" alt="Twitter Icon" srcset="images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter"></figure></a>
             <p id="date">Saturday, 14 May 2022</p>
         </header>
         <div id="banner">
@@ -48,12 +48,12 @@
             <div id="event">
                 <h3>May Lunch and Learn</h3>
                 <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>May 25, 2022 @ 12:00 pm - 1:00 pm</p>
-                <img src="images/chase_bank.png" alt="Chase bank's symbol">
+                <figure class="chase_logo"><img src="images/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/chase_bank150.webp 1x, images/chase_bank300.webp 2x, images/chase_bank600.webp 3x"></figure>
             </div>
 
             <div id="weather">
                 <h3>Weather</h3>
-                <img src="images/clear_weather.png" alt="Sun">
+                <figure class="sun"><img src="images/clear_weather70.webp" alt="Sun" srcset="images/clear_weather70.webp 1x, images/clear_weather140.webp 2x, images/clear_weather280.webp 3x"></figure>
                 <h4 id="temp"><span>74</span>°F</h4>
                 <p id="conditions">Clear Sky</p>
                 <div>
@@ -75,21 +75,21 @@
             <div id="spotlights">
                 <div id="spotlight1">
                     <h3>Chase Bank</h3>
-                    <img src="images/chase_bank.png" alt="Chase bank logo">
+                    <figure class="chase_logo"><img src="images/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/chase_bank150.webp 1x, images/chase_bank300.webp 2x, images/chase_bank600.webp 3x"></figure>
                     <p>Helping you make the most of your money.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
 
                 <div id="spotlight2">
                     <h3>Streets on Main</h3>
-                    <img src="images/streets_on_main.png" alt="Streets on main logo">
+                    <figure class="streets_logo"><img src="images/streets_on_main150.webp" alt="Streets on main logo" srcset="images/streets_on_main150.webp 1x, images/streets_on_main255.webp 2x, images/streets_on_main255.webp 3x"></figure>
                     <p>A locally owned and family operated restaurant.</p>
                     <p class="contact">Phone: (928) 275-3663</p>
                 </div>
 
                 <div id="spotlight3">
                     <h3>El Cupidos</h3>
-                    <img src="images/el_cupidos.png" alt="El cupidos logo">
+                    <figure class="cupidos_logo"><img src="images/el_cupidos260.webp" alt="Chase bank's symbol" srcset="images/el_cupidos260.webp 1x, images/el_cupidos500.webp 2x, images/el_cupidos500.webp 3x"></figure>
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
