Changed color of "Welcome!" on hero image.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,14 +40,13 @@
         </div>
         <main>
             <div id="call">
-                <!-- <img src="images/hero_image.jpg" alt="People sitting at table"> -->
                 <picture class="photoA">
                     <source media="(max-width: 639px)" srcset="images/hero_image639.webp">
                     <source media="(max-width: 1369px)" srcset="images/hero_image1369.webp">
                     <source media="(min-width: 1370px)" srcset="images/hero_image1240.webp">
                     <img src="images/hero_image1369.webp" alt="People sitting at table">
                 </picture>
-                <h3>Welcome! (placeholder image)</h3>
+                <h3>Welcome!</h3>
                 <button>Join Us</button>
             </div>
 
