Made 2 links https

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -25,10 +25,10 @@
                 <img src="https://via.placeholder.com/300x400.png" alt="" data-src="https://picsum.photos/300/400">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/300x400.png" alt="" data-src="http://placeimg.com/300/400/any">
+                <img src="https://via.placeholder.com/300x400.png" alt="" data-src="https://placeimg.com/300/400/any">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/300x400.png" alt="" data-src="http://www.placebear.com/300/400">
+                <img src="https://via.placeholder.com/300x400.png" alt="" data-src="https://www.placebear.com/300/400">
             </picture>
             <picture>
                 <img src="https://via.placeholder.com/300x400.png" alt="" data-src="https://loremflickr.com/300/400">
