--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website.">
 
         <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
@@ -25,7 +26,7 @@
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Discover</a></li>
+                    <li><a href="discover/discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
