--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../">Home</a></li>
                     <li class="active"><a href="#">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
