--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="discover/discover.html">Discover</a></li>
+                    <li><a href="discover/">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
