--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
-                <li>Lesson 04: <a href="chamber/index.html">Chamber of Commerce</a></li>
+                <li>Lesson 04: <a href="chamber/">Chamber of Commerce</a></li>
                 <li>Lesson 05: <a href="lesson5/bom.html">Dom Manipulation</a></li>
-                <li>Lesson 06: <a href="chamber/index.html">Chamber of Commerce</a></li>
-                <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading</a></li>
+                <li>Lesson 06: <a href="chamber/">Chamber of Commerce</a></li>
+                <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading</a> <a href="chamber/discover/">Discover Page</a></li>
                 <li>Lesson 08: <a href="#">Lesson 8</a></li>
                 <li>Lesson 09: <a href="#">Lesson 9</a></li>
                 <li>Lesson 10: <a href="#">Lesson 10</a></li>
