Added the days since last visit.

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -40,7 +40,9 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            
+            <div>
+                <p id="daysSince"></p>
+            </div>
         </main>
         <footer>
             <div id="main">
@@ -59,5 +61,6 @@
             </div>
         </footer>
         <script src="../js/base.js"></script>
+        <script src="js/base.js"></script>
     </body>
 </html>
