Added HTML content

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -43,6 +43,34 @@
             <div>
                 <p id="daysSince"></p>
             </div>
+            <div id="temple">
+                <img src="images/temple.jpg" alt="Snowflake Arizona LDS Temple">
+                <p>This is the LDS temple for Snowflake, Arizona. Construction started September 23, 2000 and dedicated March 3, 2002.</p>
+            </div>
+            <div id="museum">
+                <img src="images/museum.jpg" alt="Stinson Museum">
+                <p>In this museum there are items from Snowflake's prehistoric, Hispanic and LDS Pioneer past. Two of the rooms have been restored to show the living conditions of early pioneer families.</p>
+            </div>
+            <div id="highschool">
+                <img src="images/highschool.jpg" alt="Snowflake highschool">
+                <p>If your familly lives here, this is likely where you will be sending your children eventually. It is one of the oldest schools in Arizona established in 1888.</p>
+            </div>
+            <div id="downtown">
+                <img src="images/downtown.jpg" alt="Downtown Snowflake">
+                <p>This is downtown Snowflake.</p>
+            </div>
+            <div id="cabin">
+                <img src="images/rogers_cabin.jpg" alt="The Rogers' cabin">
+                <p>This cabin was built by Andrew Locy Rogers in 1878. When his family grew he ended up covering it with drywall and then building a two-story house around it. His great-grandchildren forgot about the existence of the cabin so in 1989, when the house burnt down, those demolishing the ruins found the cabin completely undamaged.</p>
+            </div>
+            <div id="freeman">
+                <img src="images/freeman_house.jpg" alt="The Freeman's home">
+                <p>The Freeman's home, built in 1893. It now has a small café in it and can be toured free of charge.</p>
+            </div>
+            <div id="flake">
+                <img src="images/flake_house.jpg" alt="The Flake's home">
+                <p>This is James Flake's home built in 1894 16 years after Snowflake was founded. Snowflake was named after his family.</p>
+            </div>
         </main>
         <footer>
             <div id="main">
