Added small formatting and moved home page css to where it goes.

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -40,7 +40,7 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            <div>
+            <div id="days">
                 <p id="daysSince"></p>
             </div>
             <div id="temple">
