Added medium css

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -44,7 +44,7 @@
                 <p id="daysSince"></p>
             </div>
             <div id="temple">
-                <img src="images/temple.jpg" alt="Snowflake Arizona LDS Temple">
+                <img src="images/temple.jpg" alt="Snowflake Arizona LDS Temple" class="shadow">
                 <p>This is the LDS temple for Snowflake, Arizona. Construction started September 23, 2000 and dedicated March 3, 2002.</p>
             </div>
             <div id="museum">
