Added more html content and formatting for it.

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -40,9 +40,16 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            <div id="days">
-                <p id="daysSince"></p>
-            </div>
+            <h1>Discover</h1>
+            <h3>Here are some interesting facts about Snowflake:</h3>
+            <ul>
+                <li id="daysSince"></li>
+                <li>Population as of 2020: 5,873</li>
+                <li>Founded in 1878 by Erastus Snow and William Jordan Flake, LDS pioneers</li>
+                <li>The weather can be over 100°F or below 0°F</li>
+                <li>We are in the Navajo County</li>
+            </ul>
+            <h3>Some interesting locations you may want to visit are:</h3>
             <div id="temple">
                 <img src="images/temple.jpg" alt="Snowflake Arizona LDS Temple" class="shadow">
                 <p>This is the LDS temple for Snowflake, Arizona. Construction started September 23, 2000 and dedicated March 3, 2002.</p>
@@ -69,7 +76,7 @@
             </div>
             <div id="flake">
                 <img src="images/flake_house.jpg" alt="The Flake's home">
-                <p>This is James Flake's home built in 1894 16 years after Snowflake was founded. Snowflake was named after his family.</p>
+                <p>This is James Flake's home built in 1894 16 years after Snowflake was founded.</p>
             </div>
         </main>
         <footer>
