--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -5,7 +5,7 @@
         <title>Table Build</title>
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="To show progressive loading and practice at doing it for WDD230 class at BYUI.">
+        <meta name="description" content="To practice building a table.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
