--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -30,7 +30,7 @@
                     <li><a href="../">Home</a></li>
                     <li class="active"><a href="#">Discover</a></li>
                     <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="../join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
