Fixed errors and removed the unfinished benefits.

--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -40,7 +40,7 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            <form method="get" action="../thankyou/">
+            <form method="get" action="../thankyou/" aria-labelledby="The form to join the chamber of commerce.">
                 <fieldset id="info">
                     <legend>Applicant Information</legend>
                     <label>First Name* <input type="text" name="fname" required></label>
@@ -59,7 +59,6 @@
                         <h4>Free</h4>
                         <p>Free membership for non profit organizations only.</p>
                         <h4>Benefits:</h4>
-                        <li>Test1</li>
                     </label>
 
                     <input type="radio" name="membership" value="bronze" class="membership" id="bronze">
@@ -68,7 +67,6 @@
                         <h4>$100</h4>
                         <p>Free membership for non profit organizations only.</p>
                         <h4>Benefits:</h4>
-                        <li>Test1</li>
                     </label>
 
                     <input type="radio" name="membership" value="silver" class="membership" id="silver">
@@ -77,7 +75,6 @@
                         <h4>$200</h4>
                         <p>Free membership for non profit organizations only.</p>
                         <h4>Benefits:</h4>
-                        <li>Test1</li>
                     </label>
 
                     <input type="radio" name="membership" value="gold" class="membership" id="gold">
@@ -86,7 +83,6 @@
                         <h4>$300</h4>
                         <p>Free membership for non profit organizations only.</p>
                         <h4>Benefits:</h4>
-                        <li>Test1</li>
                     </label>
                 </fieldset>
 
@@ -97,7 +93,7 @@
 
                 <fieldset class="hidden">
                     <legend>Hidden Date</legend>
-                    <label>Date & Time <input type="text" name="date" id="hiddendate" readonly="true"></label>
+                    <label>Date & Time <input type="text" name="date" id="hiddendate"></label>
                 </fieldset>
                 
                 <div id="buttonwrap">
