Changed radio buttons to not have any errors.

--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -55,34 +55,34 @@
                     <legend>Membership Level</legend>
                     <input type="radio" name="membership" value="np" class="membership" id="np">
                     <label class="sbs np" for="np">
-                        <h3>Non Profit</h3>
-                        <h4>Free</h4>
-                        <p>Free membership for non profit organizations only.</p>
-                        <h4>Benefits:</h4>
+                        <span id="h3">Non Profit</span>
+                        <span id="h4">Free</span>
+                        <span id="p">Free membership for non profit organizations only.</span>
+                        <span id="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="bronze" class="membership" id="bronze">
                     <label class="sbs bronze" for="bronze">
-                        <h3>Bronze</h3>
-                        <h4>$100</h4>
-                        <p>Free membership for non profit organizations only.</p>
-                        <h4>Benefits:</h4>
+                        <span id="h3">Bronze</span>
+                        <span id="h4">$100</span>
+                        <span id="p">Free membership for non profit organizations only.</span>
+                        <span id="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="silver" class="membership" id="silver">
                     <label class="sbs silver" for="silver">
-                        <h3>Silver</h3>
-                        <h4>$200</h4>
-                        <p>Free membership for non profit organizations only.</p>
-                        <h4>Benefits:</h4>
+                        <span id="h3">Silver</span>
+                        <span id="h4">$200</span>
+                        <span id="p">Free membership for non profit organizations only.</span>
+                        <span id="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="gold" class="membership" id="gold">
                     <label class="sbs gold" for="gold">
-                        <h3>Gold</h3>
-                        <h4>$300</h4>
-                        <p>Free membership for non profit organizations only.</p>
-                        <h4>Benefits:</h4>
+                        <span id="h3">Gold</span>
+                        <span id="h4">$300</span>
+                        <span id="p">Free membership for non profit organizations only.</span>
+                        <span id="h4">Benefits:</span>
                     </label>
                 </fieldset>
 
