Updated the radio buttons from ids to classes.

--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -55,34 +55,34 @@
                     <legend>Membership Level</legend>
                     <input type="radio" name="membership" value="np" class="membership" id="np">
                     <label class="sbs np" for="np">
-                        <span id="h3">Non Profit</span>
-                        <span id="h4">Free</span>
-                        <span id="p">Free membership for non profit organizations only.</span>
-                        <span id="h4">Benefits:</span>
+                        <span class="h3">Non Profit</span>
+                        <span class="h4">Free</span>
+                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="bronze" class="membership" id="bronze">
                     <label class="sbs bronze" for="bronze">
-                        <span id="h3">Bronze</span>
-                        <span id="h4">$100</span>
-                        <span id="p">Free membership for non profit organizations only.</span>
-                        <span id="h4">Benefits:</span>
+                        <span class="h3">Bronze</span>
+                        <span class="h4">$100</span>
+                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="silver" class="membership" id="silver">
                     <label class="sbs silver" for="silver">
-                        <span id="h3">Silver</span>
-                        <span id="h4">$200</span>
-                        <span id="p">Free membership for non profit organizations only.</span>
-                        <span id="h4">Benefits:</span>
+                        <span class="h3">Silver</span>
+                        <span class="h4">$200</span>
+                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="h4">Benefits:</span>
                     </label>
 
                     <input type="radio" name="membership" value="gold" class="membership" id="gold">
                     <label class="sbs gold" for="gold">
-                        <span id="h3">Gold</span>
-                        <span id="h4">$300</span>
-                        <span id="p">Free membership for non profit organizations only.</span>
-                        <span id="h4">Benefits:</span>
+                        <span class="h3">Gold</span>
+                        <span class="h4">$300</span>
+                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="h4">Benefits:</span>
                     </label>
                 </fieldset>
 
