--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -40,7 +40,7 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            <form method="get" action="../thankyou/" aria-labelledby="The form to join the chamber of commerce.">
+            <form method="get" action="../thankyou/" aria-label="The form to join the chamber of commerce.">
                 <fieldset id="info">
                     <legend>Applicant Information</legend>
                     <label>First Name* <input type="text" name="fname" required></label>
