--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -88,7 +88,7 @@
 
                 <fieldset id="description">
                     <legend>Business Description</legend>
-                    <label id="descript">Describe your business.</label><textarea name="description" for="descript"></textarea>
+                    <label>Describe your business.</label><textarea name="description"></textarea>
                 </fieldset>
 
                 <fieldset class="hidden">
