Added JSON Prophets assignment.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li>Lesson 06: <a href="chamber/">Chamber of Commerce</a></li>
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading</a> <a href="chamber/discover/">Discover Page</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Tablebuild</a> <a href="form/">Form</a></li>
-                <li>Lesson 09: <a href="#">Lesson 9</a></li>
+                <li>Lesson 09: <a href="lesson9/prophets.html">JSON</a></li>
                 <li>Lesson 10: <a href="#">Lesson 10</a></li>
                 <li>Lesson 11: <a href="#">Lesson 11</a></li>
             </ul>
