--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -61,6 +61,8 @@
                         <span class="h4">Free</span>
                         <span class="p">Free membership for non profit organizations only.</span>
                         <span class="h4">Benefits:</span>
+                        <span class="li">Discounts</span>
+                        <span class="li">Main page advertisment</span>
                     </label>
 
                     <input type="radio" name="membership" value="bronze" class="membership" id="bronze">
@@ -69,6 +71,8 @@
                         <span class="h4">$100</span>
                         <span class="p">Free membership for non profit organizations only.</span>
                         <span class="h4">Benefits:</span>
+                        <span class="li">Discounts</span>
+                        <span class="filler"></span>
                     </label>
 
                     <div class="space"></div>
@@ -79,6 +83,9 @@
                         <span class="h4">$200</span>
                         <span class="p">Free membership for non profit organizations only.</span>
                         <span class="h4">Benefits:</span>
+                        <span class="li">Discounts</span>
+                        <span class="li">Main page advertisment</span>
+                        <span class="filler"></span>
                     </label>
 
                     <input type="radio" name="membership" value="gold" class="membership" id="gold">
@@ -87,6 +94,9 @@
                         <span class="h4">$300</span>
                         <span class="p">Free membership for non profit organizations only.</span>
                         <span class="h4">Benefits:</span>
+                        <span class="li">Discounts</span>
+                        <span class="li">Main page advertisment</span>
+                        <span class="li">Training</span>
                     </label>
                 </fieldset>
 
