Added directory page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
                 <ul id="primaryNav">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="discover/">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a href="directory/">Directory</a></li>
                     <li><a href="join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -54,7 +54,7 @@
             <div id="event">
                 <h3>May Lunch and Learn</h3>
                 <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>May 25, 2022 @ 12:00 pm - 1:00 pm</p>
-                <figure class="chase_logo"><img src="images/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/chase_bank150.webp 1x, images/chase_bank300.webp 2x, images/chase_bank600.webp 3x"></figure>
+                <figure class="chase_logo"><img src="images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/icons/chase_bank150.webp 1x, images/icons/chase_bank300.webp 2x, images/icons/chase_bank600.webp 3x"></figure>
             </div>
 
             <div id="weather">
@@ -81,21 +81,21 @@
             <div id="spotlights">
                 <div id="spotlight1">
                     <h3>Chase Bank</h3>
-                    <figure class="chase_logo"><img src="images/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/chase_bank150.webp 1x, images/chase_bank300.webp 2x, images/chase_bank600.webp 3x"></figure>
+                    <figure class="chase_logo"><img src="images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/icons/chase_bank150.webp 1x, images/icons/chase_bank300.webp 2x, images/icons/chase_bank600.webp 3x"></figure>
                     <p>Helping you make the most of your money.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
 
                 <div id="spotlight2">
                     <h3>Streets on Main</h3>
-                    <figure class="streets_logo"><img src="images/streets_on_main150.webp" alt="Streets on main logo" srcset="images/streets_on_main150.webp 1x, images/streets_on_main255.webp 2x, images/streets_on_main255.webp 3x"></figure>
+                    <figure class="streets_logo"><img src="images/icons/streets_on_main150.webp" alt="Streets on main logo" srcset="images/icons/streets_on_main150.webp 1x, images/icons/streets_on_main255.webp 2x, images/icons/streets_on_main255.webp 3x"></figure>
                     <p>A locally owned and family operated restaurant.</p>
                     <p class="contact">Phone: (928) 275-3663</p>
                 </div>
 
                 <div id="spotlight3">
                     <h3>El Cupidos</h3>
-                    <figure class="cupidos_logo"><img src="images/el_cupidos260.webp" alt="Chase bank's symbol" srcset="images/el_cupidos260.webp 1x, images/el_cupidos500.webp 2x, images/el_cupidos500.webp 3x"></figure>
+                    <figure class="cupidos_logo"><img src="images/icons/el_cupidos260.webp" alt="Chase bank's symbol" srcset="images/icons/el_cupidos260.webp 1x, images/icons/el_cupidos500.webp 2x, images/icons/el_cupidos500.webp 3x"></figure>
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
