--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -28,8 +28,8 @@
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="../">Home</a></li>
-                    <li class="active"><a href="#">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a class="active">Discover</a></li>
+                    <li><a href="../directory/">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
