--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -29,8 +29,8 @@
                 <ul id="primaryNav">
                     <li><a href="../">Home</a></li>
                     <li ><a href="../discover/">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li class="active"><a>Join</a></li>
+                    <li><a href="../directory/">Directory</a></li>
+                    <li><a class="active">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
