Changed descriptions for membership levels on join page.

--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -69,7 +69,7 @@
                     <label class="sbs bronze" for="bronze">
                         <span class="h3">Bronze</span>
                         <span class="h4">$100</span>
-                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="p">Base level membership with minor benefits.</span>
                         <span class="h4">Benefits:</span>
                         <span class="li">Discounts</span>
                         <span class="filler"></span>
@@ -81,7 +81,7 @@
                     <label class="sbs silver" for="silver">
                         <span class="h3">Silver</span>
                         <span class="h4">$200</span>
-                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="p">Medium level membership with a couple of benefits.</span>
                         <span class="h4">Benefits:</span>
                         <span class="li">Discounts</span>
                         <span class="li">Main page advertisment</span>
@@ -92,7 +92,7 @@
                     <label class="sbs gold" for="gold">
                         <span class="h3">Gold</span>
                         <span class="h4">$300</span>
-                        <span class="p">Free membership for non profit organizations only.</span>
+                        <span class="p">Highest level membership with all of our benefits.</span>
                         <span class="h4">Benefits:</span>
                         <span class="li">Discounts</span>
                         <span class="li">Main page advertisment</span>
