--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading</a> <a href="chamber/discover/">Discover Page</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Tablebuild</a> <a href="form/">Form</a> <a href="chamber/join/">Join Page</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">JSON</a> <a href="chamber/directory/">Directory</a></li>
-                <li>Lesson 10: <a href="lesson10/weather-api.html">Weather API</a></li>
+                <li>Lesson 10: <a href="lesson10/weather-api.html">Weather API</a> <a href="chamber/">Weather Widget</a></li>
                 <li>Lesson 11: <a href="#">Lesson 11</a></li>
             </ul>
         </main>
