Added default image back to weather since no src is an html error.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,7 +61,7 @@
                 <h3>Weather</h3>
                 <div id="temp">
                     <figure>
-                        <img src="" alt="" id="weather-icon">
+                        <img src="images/clear_weather70.webp" alt="" id="weather-icon">
                         <figcaption></figcaption>
                     </figure>
                     <h4><span id="current-temp"></span>°F</h4>
