Fixed error in weather api

--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -22,7 +22,7 @@
                 <p>Temp: <span id="current-temp"></span> &deg;F</p>
                 <p>Condition:</p>
                 <figure>
-                    <img src="" alt="" id="weather-icon" />
+                    <img src="#" alt="" id="weather-icon" />
                     <figcaption></figcaption>
                 </figure>
             </div>
