Made the icons links to home page and fixed some formatting issues.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header>
-            <img src="images/icon.webp" alt="Icon, a snowflake." class="icon">
+            <a href="#"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="images/facebook40.webp" alt="Facebook Icon" srcset="images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
@@ -48,7 +48,7 @@
                     <img src="images/hero_image1369.webp" alt="People sitting at table">
                 </picture>
                 <h3>Welcome!</h3>
-                <button>Join Us</button>
+                <a href="join/">Join Us</a>
             </div>
 
             <div id="event">
@@ -78,7 +78,7 @@
             </div>
 
             <div id="join">
-                <h3>Join Us!</h3>
+                <a href="join/"><h3>Join Us!</h3></a>
                 <p>Want to become a chamber member? Fill out an online application.</p>
             </div>
             
@@ -107,7 +107,7 @@
         </main>
         <footer>
             <div id="main">
-                <img src="images/icon.webp" alt="Icon, a snowflake." class="icon">
+                <a href="#" id="iconlink"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
