--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header>
-            <img src="../images/icon.webp" alt="Icon, a snowflake." class="icon">
+            <a href="../"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, ../images/facebook80.webp 2x, ../images/facebook160.webp 3x" id="facebook"></figure></a>
@@ -106,7 +106,7 @@
         </main>
         <footer>
             <div id="main">
-                <img src="../images/icon.webp" alt="Icon, a snowflake." class="icon">
+                <a href="../" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
