Fixed footer icon's link not being in the same spot as icon.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -99,7 +99,7 @@
 
                 <div id="spotlight3">
                     <h3>El Cupidos</h3>
-                    <figure class="cupidos_logo"><img src="images/icons/el_cupidos260.webp" alt="Chase bank's symbol" srcset="images/icons/el_cupidos260.webp 1x, images/icons/el_cupidos500.webp 2x, images/icons/el_cupidos500.webp 3x"></figure>
+                    <figure class="cupidos_logo"><img src="images/icons/el_cupidos260.webp" alt="El Cupido's logo" srcset="images/icons/el_cupidos260.webp 1x, images/icons/el_cupidos500.webp 2x, images/icons/el_cupidos500.webp 3x"></figure>
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
