Fixed link to directory in 404 page.

--- a/chamber/404/index.html
+++ b/chamber/404/index.html
@@ -28,8 +28,8 @@
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="../">Home</a></li>
-                    <li ><a href="../discover/">Discover</a></li>
-                    <li><a class="active">Directory</a></li>
+                    <li><a href="../discover/">Discover</a></li>
+                    <li><a href="../directory/">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
