Removed old banner pictures and added new one with proper formatting.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,10 +42,10 @@
         <main>
             <div id="call">
                 <picture class="photoA">
-                    <source media="(max-width: 639px)" srcset="images/hero_image639.webp">
-                    <source media="(max-width: 1369px)" srcset="images/hero_image1369.webp">
-                    <source media="(min-width: 1370px)" srcset="images/hero_image1240.webp">
-                    <img src="images/hero_image1369.webp" alt="People sitting at table">
+                    <source media="(max-width: 639px)" srcset="images/banner639.webp">
+                    <source media="(max-width: 1369px)" srcset="images/banner1369.webp">
+                    <source media="(min-width: 1370px)" srcset="images/bannerlarge.webp">
+                    <img src="images/bannerlarge.webp" alt="Picture of snowflake arizona">
                 </picture>
                 <h3>Welcome!</h3>
                 <a href="join/">Join Us</a>
