Updated titles and descriptions.

--- a/chamber/directory/index.html
+++ b/chamber/directory/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Snowflake Chamber of Commerce | Directory</title>
+        <title>Snowflake Chamber | Directory</title>
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="Discover page. Here you can discover interesting things about Snowflake, Arizona.">
+        <meta name="description" content="Directory page. This has a list of all of our partnered businesses and some information about them.">
 
         <link rel="stylesheet" href="../../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
