--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Snowflake Chamber of Commerce</title>
+        <title>Snowflake Chamber | Home</title>
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website.">
+        <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website home page with information of events and businesses.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="css/all.css">
