--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Snowflake Chamber of Commerce | Join Us</title>
+        <title>Snowflake Chamber | Join Us</title>
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="Discover page. Here you can discover interesting things about Snowflake, Arizona.">
+        <meta name="description" content="This is where you can join us and become a partner.">
 
         <link rel="stylesheet" href="../../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
