--- a/chamber/thankyou/index.html
+++ b/chamber/thankyou/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="Discover page. Here you can discover interesting things about Snowflake, Arizona.">
+        <meta name="description" content="Thank you for filling out our form.">
 
         <link rel="stylesheet" href="/../../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
